<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:padding="8dp"
        android:text="@string/red_button"
        android:textSize="24sp"
        android:textStyle="bold"
        android:onClick="changeToRed"/>
    <Button
        android:id="@+id/btn_orange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:padding="8dp"
        android:text="@string/orange_button"
        android:textSize="24sp"
        android:textStyle="bold"
        android:onClick="changeToOrange"/>
    <Button
        android:id="@+id/btn_yellow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:padding="8dp"
        android:text="@string/yellow_button"
        android:textSize="24sp"
        android:textStyle="bold"
        android:onClick="changeToYellow"/>
    <Button
        android:id="@+id/btn_green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:padding="8dp"
        android:text="@string/green_button"
        android:textSize="24sp"
        android:textStyle="bold"
        android:onClick="changeToGreen"/>
    <Button
        android:id="@+id/btn_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:padding="8dp"
        android:text="@string/blue_button"
        android:textSize="24sp"
        android:textStyle="bold"
        android:onClick="changeToBlue"/>
    <Button
        android:id="@+id/btn_purple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:padding="8dp"
        android:text="@string/purple_button"
        android:textSize="24sp"
        android:textStyle="bold"
        android:onClick="changeToPurple"/>

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:padding="8dp"
        android:text="@string/clear_button"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        android:onClick="clearAndRestart"
        android:visibility="invisible"/>

</LinearLayout>